bvarious fixes committed before going away
git-svn-id: file:///srv/svnroot/semilib/trunk@1850 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/TODO
+++ b/TODO
@@ -1,1 +1,1 @@
-fix #include name.cpp for template objects to use the export keword where possible
+see the Doxygen generated docs for the todo list
